Fixed banner text alignment

--- a/apps/jobs/static/jobs/css/style.css
+++ b/apps/jobs/static/jobs/css/style.css
@@ -16,8 +16,9 @@ body {
 
 .bg-text{
     position: relative;
-    top: 120px;
-    margin-left: 238px;
+    top: 105px;
+    margin-right: 290px;
+    text-align: center;
 }
 
 /* Form */
@@ -70,6 +71,7 @@ td {
     -webkit-transition: .5s ease;
     transition: .5s ease;
     color: #fff;
+    text-shadow: 2px 2px rgba(0,0,0,.15);
 }
 
 .aqua-gradient:hover {
